Fixed portfolio width & contact text alignment

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -581,7 +581,7 @@ body {
     margin-left: auto;
     margin-right: auto;
 
-    width: 1000px;
+    max-width: 1000px;
 
     position: relative;
     top: 1000px;
@@ -633,6 +633,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    margin: 0 20px;
+
+    text-align: center;
 
     position: relative;
     top: 1400px;
